# chinese-translation-app

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
deploy/: KUBERNETES.md  README.md
docs/: SYSTEM_DESIGN.md  deployment.md  final_report.md  proposal.md
frontend/: Dockerfile  README.md  package-lock.json  package.json
server/: .dockerignore  .pylintrc  DOCKERFILE  Dockerfile  README.md  instances.py  pyproject.toml  requirements.txt
server/api/: server.py
server/api/evaluation/: debug_memory.py  evaluation_pipeline.py
server/api/models/: base.py  load.py  quantized.py
server/api/routes/: router.py  translate.py
server/api/scripts/: evaluate.py
server/aws/: README.md  aws_cmd.py  deploy_docker.sh  instance.py
server/chinese_translation_api/: results.md  server.py
server/chinese_translation_api/evaluation/: evaluation_pipeline.py
server/chinese_translation_api/loadtest/: locustfile.py  master.conf
server/chinese_translation_api/models/: README.md  base.py  graph_fusion.py  load.py
server/chinese_translation_api/routes/: router.py  translate.py
server/chinese_translation_api/scripts/: EVALUATION_REG.md  evaluate.py  evaluate_quantized_dynamic.py
server/loadtest/: locustfile.py  master.conf
server/loadtest/test_data/: opus-2020-07-17.test.txt
server/loadtest_cli/: README.md  cli.py  config.yaml  gce.yaml  locustfile.py
server/loadtest_cli/stats/: README.md
server/nginx/: README.md  nginx.conf
server/test_data/: opus-2020-07-17.test.txt
ui/: Dockerfile  README.md  package.json
ui/utils/: err.ts
(+44 files in other folders)
