[tool.poetry]
name = "chinese-translation-api"
version = "0.1.0"
description = ""
authors = ["Joseph Chen <jchen42703@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.18.0"
fastapi = "^0.75.1"
pydantic = "^1.9.0"
torch = "^1.11.0"
uvicorn = "^0.17.6"
sentencepiece = "^0.1.96"
boto3 = "^1.21.40"
optimum = "^1.1.0"

[tool.poetry.dev-dependencies]
gunicorn = "^20.1.0"
pylint = "^2.13.5"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
